<resources>
    <string name="app_name">PlumBill</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PlumBill</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_login">Login</string>
    <string name="menu_help">Help</string>

    <string name="login">Login</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="test_data">Insert test data</string>
    <string name="delete_data">Delete all data</string>
    <string name="title_activity_editor">Enter a product</string>
    <string name="hint_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier</string>
    <string name="hint_supplier_number">Phone</string>
    <string name="button_text">Enter Product</string>
    <string name="product_text">Product data:</string>
    <string name="product_text_absent">no data available.</string>
    <string name="edit_product_title">Edit product details</string>
    <string name="enter_product_title">Enter product details</string>
    <string name="delete_product">Delete product</string>
    <string name="unsaved_product_data">Are you sure you want to discard your changes?</string>
    <string name="discard">Discard</string>
    <string name="keep">Keep</string>
    <string name="failed_update">Failed updating product</string>
    <string name="successful_save">Saved product</string>
    <string name="successful_update">Saved product</string>
    <string name="successful_delete">Deleted product</string>
    <string name="unsuccessful_delete">Failed deleting product</string>
    <string name="delete_dialog">Are you sure you want to delete this product?</string>
    <string name="quantity_adjust_hint">Adjust available quantity:</string>
    <string name="sale_button_text">Sale</string>
    <string name="invalid_input">Invalid input</string>
    <string name="successful_sale">Product sold</string>
    <string name="unsuccessful_sale">No stock left</string>
    <string name="need_input">Please enter details for the product</string>
    <string name="need_input_phone">Enter a phone number to order</string>
    <string name="adjust_quantity_text">Adjust quantity:</string>
    <string name="empty_text">Inventory is empty.</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="order">Order</string>
    <string name="item">Item</string>
    <string name="_0">0</string>

    <string name="prompt_username">Name :</string>
    <string name="prompt_email">Email :</string>
    <string name="prompt_password">Password :</string>
    <string name="prompt_password_again">Confirm Password :</string>
    <string name="prompt_phone">Mobile Number :</string>
    <string name="prompt_aadhaar">Aadhaar Number :</string>

    <string name="action_sign_up">Sign Up</string>
    <string name="action_register">Register</string>
    <string name="load_picture">Upload Image</string>
    <string name="choose_picture">Choose Image</string>
    <string name="error_invalid_password">Invalid Password!</string>
    <string name="error_field_required">Field Required!</string>
    <string name="error_invalid_email">Invalid Email!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="contact">Contact :</string>
    <string name="aadhaar">Aadhaar :</string>
    <string name="user_id">User ID</string>
    <string name="create_bill">Create Bill</string>
    <string name="aboutdesc">PlumBill is a platform to effectively manage the plumbing network operated by Vinayak Hardware. It provides a variety of functionalities to create and share a bill, access billing information and a wide range of Administrator functions to effectively manipulate the database with user-friendly interface.</string>
    <string name="developer">Developed by Nishi Mahalwar</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_products">Manage Products</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="update_item">Update Item</string>
    <string name="add_user">Add User</string>
    <string name="delete_user">Delete User</string>
    <string name="update_user">Update User</string>
    <string name="view_user">View User</string>
    <string name="view_all_users">View All Users</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="submit">Submit</string>


</resources>