<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        style="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="@string/todo">


        <ImageView
            android:id="@+id/personimageView"
            style="@style/ImageTheme"
            android:layout_marginBottom="@dimen/margin" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <AutoCompleteTextView
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_username"
                style="@style/AutoCompleteTheme"
                android:textColor="@color/grey"
                android:textColorHint="@color/lightgrey"
                android:inputType="textNoSuggestions"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <AutoCompleteTextView
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                style="@style/AutoCompleteTheme"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <AutoCompleteTextView
                android:id="@+id/register_aadhaar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_aadhaar"
                android:inputType="numberDecimal"
                style="@style/AutoCompleteTheme"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <AutoCompleteTextView
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                style="@style/AutoCompleteTheme"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                style="@style/AutoCompleteTheme"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <EditText
                android:id="@+id/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_password_again"
                android:imeActionId="@integer/register_form_finished"
                android:imeActionLabel="@string/action_sign_up"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                style="@style/AutoCompleteTheme"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonUploadPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/load_picture"
            style="@style/whiteButtonTheme" />
        <Button
            android:id="@+id/register_sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_up"
            style="@style/ButtonTheme" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>