<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lighter_orange"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="@string/todo">


        <ImageView
            android:id="@+id/personimageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/plumbill_logo1_transparent"
            android:contentDescription="@string/todo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <AutoCompleteTextView
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                style="@style/AutoCompleteTheme"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <AutoCompleteTextView
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone"
                style="@style/AutoCompleteTheme"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <AutoCompleteTextView
                android:id="@+id/register_aadhaar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_aadhaar"
                style="@style/AutoCompleteTheme"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <AutoCompleteTextView
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                style="@style/AutoCompleteTheme"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">
            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingLeft="15dp"
                android:paddingBottom="5dp"
                android:paddingRight="15dp"
                android:fontFamily="@font/montserrat"
                android:textColorHint="@color/lightgrey"
                android:textSize="20sp"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin">

            <EditText
                android:id="@+id/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_again"
                android:imeActionId="@integer/register_form_finished"
                android:imeActionLabel="@string/action_sign_up"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingLeft="15dp"
                android:paddingBottom="5dp"
                android:paddingRight="15dp"
                android:fontFamily="@font/montserrat"
                android:textColorHint="@color/lightgrey"
                android:textSize="20sp"
                tools:targetApi="p" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            style="@style/ButtonTheme"
            android:layout_marginTop="30dp"
            android:text="@string/update_user" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>