<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:foregroundGravity="center_horizontal"
    style="@style/AppTheme"
    tools:context=".admin.AdminActivity">

    <ImageView
        android:id="@+id/imageView"
        style="@style/ImageTheme"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/user_management_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/plumbill_logo1_transparent"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/user_management_button"
        style="@style/ButtonTheme"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/manage_users"
        app:layout_constraintBottom_toTopOf="@+id/product_management_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/product_management_button"
        style="@style/ButtonTheme"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/manage_products"
        app:layout_constraintBottom_toTopOf="@id/upload_bill_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_management_button" />

    <Button
        android:id="@+id/upload_bill_button"
        style="@style/ButtonTheme"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:text="@string/upload_bill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_management_button" />


</androidx.constraintlayout.widget.ConstraintLayout>