<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_orange"
    android:padding="@dimen/padding"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.about.AboutFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="@dimen/margin"
        android:contentDescription="@string/todo"
        android:src="@drawable/plumbill_logo1_transparent"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:fontFamily="@font/montserrat"
        android:justificationMode="inter_word"
        android:padding="@dimen/padding"
        android:text="@string/aboutdesc"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:fontFamily="@font/montserrat"
        android:gravity="bottom|center_horizontal"
        android:padding="@dimen/padding"
        android:text="@string/developer"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>