<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_orange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lighter_orange"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/profileImageView"
            style="@style/ImageTheme"
            android:layout_marginBottom="30dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/prompt_username"
                android:layout_gravity="end"
                style="@style/TextViewTheme"/>

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                style="@style/TextViewTheme"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/contact"
                android:layout_gravity="end"
                style="@style/TextViewTheme"/>

            <TextView
                android:id="@+id/profile_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                style="@style/TextViewTheme"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aadhaar"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/aadhaar"
                android:layout_gravity="end"
                style="@style/TextViewTheme"/>

            <TextView
                android:id="@+id/profile_aadhaar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                style="@style/TextViewTheme" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/prompt_email"
                style="@style/TextViewTheme" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                style="@style/TextViewTheme" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>