<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="com.mahalwar.plumbill.AddItemActivity">


        <LinearLayout
            style="@style/EditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemtextview"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:padding="10dp"
                android:text="@string/hint_name"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_quantity"
            style="@style/EditorFieldStyle"
            android:drawableStart="@drawable/baseline_list_black_18dp"
            android:drawableLeft="@drawable/baseline_list_black_18dp"
            android:hint="@string/hint_quantity"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/adjust_quantity_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/decrease_quantity"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@color/orange"
                    android:clickable="true"
                    android:contentDescription="@string/todo"
                    android:focusable="true"

                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_exposure_neg_1_white_18dp" />

                <ImageButton
                    android:id="@+id/increase_quantity"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:background="@color/orange"
                    android:clickable="true"
                    android:contentDescription="@string/todo"
                    android:focusable="true"

                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_exposure_plus_1_white_18dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>